Updated h1,h2 sm+lg heading text calc to display correctly on safari

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,7 +22,7 @@ body {
   flex-direction: column;
   min-height: 100dvh;
   margin: 0;
-  color: #f8f8ff;
+  color: $body-text-color;
   font-family: "Noto Sans", sans-serif;
   line-height: 1.5;
 }
@@ -46,7 +46,7 @@ h1.lg-heading {
   font-size: clamp(3rem, 6vw, 5rem);
   text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
   margin-bottom: 1rem;
-  color: #f8f8ff;
+  color: $heading-color;
 }
 
 h2.sm-heading {
@@ -54,7 +54,7 @@ h2.sm-heading {
   font-weight: 400;
   margin-bottom: 1rem;
   text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  color: #f8f8ff;
+  color: $heading-color;
 }
 
 h3 {
